[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Gamer.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/PauseMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.129412, 0.129412, 0.443137 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 85.0
margin_top = 48.0
margin_right = 235.0
margin_bottom = 132.0
custom_constants/separation = 9

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "Pause"
align = 1
valign = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 150.0
margin_bottom = 28.0

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 150.0
margin_bottom = 56.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 2 )
text = "Lanjutkan Permainan"

[node name="SaveButton" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 65.0
margin_right = 150.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 4 )
text = "Simpan Permainan"

[node name="LoadButton" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 93.0
margin_right = 150.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 5 )
text = "Muat Permainan"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 150.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 3 )
text = "Keluar"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
